Refactor: details in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
 <div>
-    sandro
+    sandro with conflicts :D
+    sandro with conflicts :D
+    sandro with conflicts :D
 </div>
 </body>
 </html>
