Refactor: add some details

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
 
 <div>
-    sandro with conflicts :D
-    sandro with conflicts :D
-    sandro with conflicts :D
+    sandro without conflicts :D
+    sandro without conflicts :D
+    sandro without conflicts :D
+    sandro without conflicts :D
+
 </div>
 </body>
 </html>
